# CrSDKHelper

./: .gitignore  README-ja.md  README.md
cmake/: CrSDKUtils.cmake  FindCrSDK.cmake
examples/cpp/RemoteCli/: CMakeLists.txt  README.md
examples/cpp/camera_properties/: CMakeLists.txt  README.md  camera_properties.cpp
examples/cpp/count_camera/: CMakeLists.txt  README.md  count_camera.cpp
test/find_error/: CMakeLists.txt  README.md  error_string_generator.py  find_error.cpp
test/findcrsdk/: CMakeLists.txt  README.md
